<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Search</string>
    <string name="title_activity_main">Twitter Search</string>
    <string name="button_save">Save</string>
    <string name="tagged_search_title">Tagged Searches</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_clear">Clear All Tags</string>
    <string name="prompt_tag">Enter tag name</string>
    <string name="prompt_query">Enter Twitter search query here</string>
    <string name="search_url">http://twitter.com/search?q=</string>
    <string name="alert_save_title">Save Tagged Search</string>
    <string name="alert_save_message">The query and tag fields must contain values!</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">OK</string>
    <string name="alert_clear_title">Clear Search Tags</string>
    <string name="alert_clear_message">Are you sure you want to clear all tagged searches?</string>
    <string name="alert_delete_title">Delete Tagged Search</string>
    <string name="alert_delete_message">Are you sure you want to delete this search?</string>

</resources>
