<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <EditText
            android:id="@+id/text_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/prompt_query"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <EditText
            android:id="@+id/text_tag"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/prompt_tag"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:nextFocusRight="@+id/button_save" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/tagged_search_title"
            android:textSize="@dimen/tagged_search_size"
            android:background="@color/tagged_search_background"
        	android:padding="5dip" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/tagged_search_background" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2" >

            <TableLayout
                android:id="@+id/TableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/button_clear" />

    </TableRow>

</TableLayout>
